fix contact styles on mobile

--- a/src/components/girlWindowStyles.css
+++ b/src/components/girlWindowStyles.css
@@ -5,3 +5,9 @@
   height: 50vmax;
   width: 50vmax;
 }
+
+svg#girlWindowSvg {
+  left: 10vw;
+  position: absolute;
+  bottom: -10vh;
+}
